Closed
Bug 279041
Opened 21 years ago
Closed 21 years ago
nsHTMLAreaElement should have a toString method similar to nsHTMLAnchorElement
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: bugzilla-mozilla-20000923)
Details
(Keywords: testcase)
Attachments
(2 files)
|
1.17 KB,
text/html
|
Details | |
|
1.86 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
tested: mozilla1.7b ish, mozilla-trunk, ie6(wXP-sp2)sp2, netscape4.8
expected results:
iterating over document.links should give me urls.
actual results:
I get [object HTMLAreaElement @ 0x1e18fe0] (hexaddress is part of the actual
instance of the object, if you're not a developer please don't comment on this)
or possibly [object HTMLAreaElement] for each links from areas.
| Assignee | ||
Comment 2•21 years ago
|
||
Comment 3•21 years ago
|
||
Comment on attachment 172168 [details] [diff] [review]
Add ToString to nsHTMLAreaElement
r+sr=jst
Attachment #172168 -
Flags: superreview+
Attachment #172168 -
Flags: review?(jst)
Attachment #172168 -
Flags: review+
| Assignee | ||
Comment 4•21 years ago
|
||
Checked in --> FIXED.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: DOM: HTML → DOM: Core & HTML
QA Contact: ian → general
You need to log in
before you can comment on or make changes to this bug.
Description
•