Bug 279041 - Add ToString to nsHTMLAreaElement. r+sr=jst